[gd_scene load_steps=3 format=3 uid="uid://bxjkouc0naihd"]

[ext_resource type="Theme" uid="uid://cqkgu2o3738wj" path="res://Theme.tres" id="1_3kf3n"]
[ext_resource type="Script" uid="uid://usnnjerunmwh" path="res://Scripts/menu.gd" id="1_6pedr"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6pedr")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 140.0
offset_right = 660.0
offset_bottom = 384.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3kf3n")
theme_override_font_sizes/font_size = 120
text = "Attack Ships"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3kf3n")
theme_override_font_sizes/font_size = 120
text = "Play"

[node name="Button2" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3kf3n")
theme_override_colors/font_pressed_color = Color(0.180392, 0.211765, 0.301961, 1)
theme_override_font_sizes/font_size = 120
text = "Tutorial"

[node name="Button3" type="Button" parent="VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_3kf3n")
theme_override_colors/font_pressed_color = Color(0.180392, 0.211765, 0.301961, 1)
theme_override_font_sizes/font_size = 120
text = "Quit"

[connection signal="button_down" from="VBoxContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="VBoxContainer/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_up" from="VBoxContainer/MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_button_up"]
